[package]
name = "conv-rs"
version = "0.1.0"
edition = "2021"
authors = ["Takumi Mori"]
description = "CLI converter for multi extensions."
license = "MIT"

[[bin]]
name = "conv"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
csv = "1.1"
regex = "1.7.0"
